# gdsc8_2025_dennis

./: README.md
gdsc_2025-main/: LICENSE  README.md  pyproject.toml
gdsc_2025-main/notebooks/: Evaluate Results.ipynb  Job_Info_Extraction.ipynb  Knowledge_Graph_and_Submission.ipynb  PersonaInfo_Extraction_Pipeline.ipynb  Training_Info_Extraction.ipynb
gdsc_2025-main/src/: __init__.py  agents.py  config.py  models.py  prompts.py  utils.py
gdsc_2025-main/src/common/: canonicalization.py  env.py
gdsc_2025-main/src/modules/job_info_extraction/: __init__.py  backfill.py  domain_picker.py  io.py  llm_client.py  models.py  parsing.py  pipeline.py  prefill.py  skills_extractor.py  utils.py
gdsc_2025-main/src/modules/knowledge_graph/: README.md  domain_utils.py  graph.py  matching.py  normalization.py  ranking.py  utils.py
gdsc_2025-main/src/modules/persona_info_extraction/: README.md  __init__.py  extraction.py  interview.py  io.py  llm_client.py  models.py  pipeline.py  utils.py  validation.py
gdsc_2025-main/src/modules/training_info_extraction/: README.md  __init__.py  backfill.py  extract.py  heuristics.py  io.py  llm_client.py  parsing.py  pipeline.py  skills.py  triplet.py  utils.py
